--- a/.github/workflows/wiz-cli-ci-scan.yaml
+++ b/.github/workflows/wiz-cli-ci-scan.yaml
@@ -19,7 +19,7 @@ jobs:
       VULN_POLICIES: "vuln-one-medium"
       WIZ_CLIENT_ID: ${{ secrets.WIZ_CLIENT_ID }}
       WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
-      WIZ_ENV: ${{ secrets.WIZ_ENV }}
+      # WIZ_ENV: ${{ secrets.WIZ_ENV }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
